--- a/views/admin/view_course.ejs
+++ b/views/admin/view_course.ejs
@@ -52,23 +52,31 @@
                                     <table id="zero_config" class="table table-striped table-bordered no-wrap">
                                         <thead>
                                             <tr>
+                                                <th>No</th>
                                                 <th>Name</th>
-                                                <th>Position</th>
-                                                <th>Office</th>
-                                                <th>Age</th>
-                                                <th>Start date</th>
-                                                <th>Salary</th>
+                                                <th>Thumbnail Url</th>
+                                                <th>Type</th>
+                                                <th>Status</th>
+                                                <th>Price</th>
+                                                <th>Level</th>
+                                                <th>Description</th>
+                                                <th>Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <td>Tiger Nixon</td>
-                                                <td>System Architect</td>
-                                                <td>Edinburgh</td>
-                                                <td>61</td>
-                                                <td>2011/04/25</td>
-                                                <td>$320,800</td>
-                                            </tr>
+                                            <% for(let i=0; i < dataCourse.length; i++){ %>
+                                                <tr>
+                                                    <td><%= i+1 %></td>
+                                                    <td><%= dataCourse[i].name %></td>
+                                                    <td><%= dataCourse[i].thumbnail %></td>
+                                                    <td><%= dataCourse[i].type %></td>
+                                                    <td><%= dataCourse[i].status %></td>
+                                                    <td><%= dataCourse[i].price %></td>
+                                                    <td><%= dataCourse[i].level %></td>
+                                                    <td><%= dataCourse[i].description %></td>
+                                                    <td><button type="button" class="btn waves-effect waves-light btn-danger"><i data-feather="delete" class="feather-icon"></i></button></td>
+                                                </tr>
+                                            <% } %>
                                         </tbody>
                                     </table>
                                 </div>
@@ -107,20 +115,25 @@
     aria-labelledby="fullWidthModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-full-width">
         <div class="modal-content">
+            <form action="/dashboard/course" method="POST">
             <div class="modal-header">
                 <h4 class="modal-title" id="fullWidthModalLabel">Add Data Course</h4>
                 <button type="button" class="close" data-dismiss="modal"
                     aria-hidden="true">×</button>
             </div>
             <div class="modal-body">
-                <form class="mt-4">
                     <div class="form-group">
                         <label for="">Course Name</label>
-                        <input type="text" class="form-control" id="placeholder"
-                            placeholder="Course Name">
+                        <input type="text" class="form-control" name="name" id="placeholder"
+                            placeholder="Course Name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Thumbnail</label>
+                        <input type="text" class="form-control" name="thumbnail" id="placeholder"
+                            placeholder="Url Thumbnail" >
                     </div>
                     <div class="custom-control custom-radio mb-3">
-                        <input type="radio" id="customRadio1" name="customRadio"
+                        <input type="checkbox" id="customRadio1" value="1" name="certificate"
                         class="custom-control-input">
                         <label class="custom-control-label" for="customRadio1">Certificate</label>
                     </div>
@@ -128,50 +141,62 @@
                     <div class="form-check form-check-inline">
                         <div class="custom-control custom-radio">
                             <input type="radio" class="custom-control-input" id="customControlValidation2"
-                                name="radio-stacked">
+                                name="type" value="free">
                             <label class="custom-control-label" for="customControlValidation2">Free</label>
                         </div>
                     </div>
                     <div class="form-check form-check-inline">
                         <div class="custom-control custom-radio">
                             <input type="radio" class="custom-control-input" id="customControlValidation3"
-                                name="radio-stacked">
+                                name="type" value="premium">
                             <label class="custom-control-label" for="customControlValidation3">Premium</label>
                         </div>
                     </div>
-
+                    <div class="form-group mt-3">
+                        <label for="">Price</label>
+                        <input type="number" class="form-control" id="placeholder"
+                            placeholder="Price" value="0" name="price">
+                    </div>
                     <div class="form-group mt-3 mb-4">
                         <label class="mr-sm-2" for="inlineFormCustomSelect">Status</label>
-                        <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                        <select class="custom-select mr-sm-2" name="status" id="inlineFormCustomSelect" required>
                             <option selected>Choose...</option>
-                            <option value="1">Published</option>
-                            <option value="2">Draft</option>
+                            <option value="published">Published</option>
+                            <option value="draft">Draft</option>
                         </select>
                     </div>
                     <div class="form-group mt-3 mb-4">
                         <label class="mr-sm-2" for="inlineFormCustomSelect">Level</label>
-                        <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                        <select class="custom-select mr-sm-2"  name="level" id="inlineFormCustomSelect" required>
                             <option selected>Choose...</option>
-                            <option value="1">Beginner</option>
-                            <option value="2">Intermediate</option>
-                            <option value="2">Advance</option>
+                            <option value="all-level">All Level</option>
+                            <option value="beginner">Beginner</option>
+                            <option value="intermediate">Tntermediate</option>
+                            <option value="advance">Advance</option>
                         </select>
+                    </div>
+                    <div class="form-group mt-3 ">
+                        <label for="">Description</label>
+                        <input type="text" class="form-control" name="description" id="placeholder"
+                            placeholder="Description">
                     </div>
                     <div class="form-group">
                         <label for="">Mentor Id</label>
-                        <input type="text" class="form-control" id="placeholder"
-                            placeholder="Mentor Id">
+                        <input type="number" class="form-control" name="mentor_id" id="placeholder"
+                            placeholder="Mentor Id" required>
                     </div>
-                </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-light"
                     data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
             </div>
+            
+        </form>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
 
     <script src="/libs/jquery/dist/jquery.min.js"></script>
     <script src="/libs/popper.js/dist/umd/popper.min.js"></script>
