--- a/views/admin/view_course.ejs
+++ b/views/admin/view_course.ejs
@@ -15,10 +15,12 @@
         <!-- ============================================================== -->
         <!-- Page wrapper  -->
         <!-- ============================================================== -->
+       
         <div class="page-wrapper">
             <!-- ============================================================== -->
             <!-- Bread crumb and right sidebar toggle -->
             <!-- ============================================================== -->
+            
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-7 align-self-center">
@@ -44,6 +46,11 @@
                 <button type="button" class="btn waves-effect waves-light btn-primary mb-3" data-toggle="modal"
                 data-target="#full-width-modal">Add Data</button>
                  <!-- basic table -->
+                 <% if(alert.message != "") {%>
+                    <div class="alert alert-<%= alert.status %>" role="alert">
+                        <%= alert.message %>
+                      </div>
+                    <% } %>
                  <div class="row">
                     <div class="col-12">
                         <div class="card">
@@ -74,7 +81,12 @@
                                                     <td><%= dataCourse[i].price %></td>
                                                     <td><%= dataCourse[i].level %></td>
                                                     <td><%= dataCourse[i].description %></td>
-                                                    <td><button type="button" class="btn waves-effect waves-light btn-danger"><i data-feather="delete" class="feather-icon"></i></button></td>
+                                                    <td>
+                                                        <form action="/dashboard/course/<%= dataCourse[i].id %>?_method=DELETE" method="POST">
+                                                        <a href="javascript:void()" type="button" class="btn waves-effect waves-light btn-warning tombol-edit" data-toggle="modal"
+                                                        data-target="#full-width-modal-edit" data-id="<%= dataCourse[i].id %>" data-name="<%= dataCourse[i].name %>" data-thumbnail="<%= dataCourse[i].thumbnail %>" data-type="<%= dataCourse[i].type %>" data-status="<%= dataCourse[i].status %>" data-price="<%= dataCourse[i].price %>" data-level="<%= dataCourse[i].level %>" data-description="<%= dataCourse[i].description %>" data-certificate="<%= dataCourse[i].certificate %>" data-mentor_id="<%= dataCourse[i].mentor_id %>"><i data-feather="edit" class="feather-icon"></i></a>
+                                                            <button type="submit" class="btn waves-effect waves-light btn-danger"><i data-feather="delete" class="feather-icon"></i></button></td>
+                                                        </form>
                                                 </tr>
                                             <% } %>
                                         </tbody>
@@ -198,6 +210,98 @@
 </div><!-- /.modal -->
 
 
+<!-- Full width modal content -->
+<div id="full-width-modal-edit" class="modal fade" tabindex="-1" role="dialog2"
+aria-labelledby="fullWidthModalLabel" aria-hidden="true">
+<div class="modal-dialog modal-full-width">
+    <div class="modal-content">
+        <form action="/dashboard/course?_method=PUT" method="POST">
+        <div class="modal-header">
+            <h4 class="modal-title" id="fullWidthModalLabel">Edit Data Course</h4>
+            <button type="button" class="close" data-dismiss="modal"
+                aria-hidden="true">×</button>
+        </div>
+        <div class="modal-body">
+            <div class="form-group">
+                <input type="hidden" class="form-control id" name="id" id="placeholder"
+                    placeholder="Course Name" required>
+            </div>
+                <div class="form-group">
+                    <label for="">Course Name</label>
+                    <input type="text" class="form-control name" name="name" id="placeholder"
+                        placeholder="Course Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="">Thumbnail</label>
+                    <input type="text" class="form-control thumbnail" name="thumbnail" id="placeholder"
+                        placeholder="Url Thumbnail" >
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                    <input type="checkbox" id="certificate1" value="1" name="certificate"
+                    class="custom-control-input">
+                    <label class="custom-control-label" for="certificate1">Certificate</label>
+                </div>
+                <label for="">Type</label><br>
+                <div class="form-check form-check-inline">
+                    <div class="custom-control custom-radio">
+                        <input type="radio" class="custom-control-input" id="editType"
+                            name="type" value="free">
+                        <label class="custom-control-label" for="editType">Free</label>
+                    </div>
+                </div>
+                <div class="form-check form-check-inline">
+                    <div class="custom-control custom-radio">
+                        <input type="radio" class="custom-control-input" id="editType2"
+                            name="type" value="premium">
+                        <label class="custom-control-label" for="editType2">Premium</label>
+                    </div>
+                </div>
+                <div class="form-group mt-3">
+                    <label for="">Price</label>
+                    <input type="number" class="form-control price" id="placeholder"
+                        placeholder="Price" value="0" name="price">
+                </div>
+                <div class="form-group mt-3 mb-4">
+                    <label class="mr-sm-2" for="inlineFormCustomSelect">Status</label>
+                    <select class="custom-select mr-sm-2 status" name="status" id="inlineFormCustomSelect" required>
+                        <option selected>Choose...</option>
+                        <option value="published">Published</option>
+                        <option value="draft">Draft</option>
+                    </select>
+                </div>
+                <div class="form-group mt-3 mb-4">
+                    <label class="mr-sm-2" for="inlineFormCustomSelect">Level</label>
+                    <select class="custom-select mr-sm-2 level"  name="level" id="inlineFormCustomSelect" required>
+                        <option selected>Choose...</option>
+                        <option value="all-level">All Level</option>
+                        <option value="beginner">Beginner</option>
+                        <option value="intermediate">Tntermediate</option>
+                        <option value="advance">Advance</option>
+                    </select>
+                </div>
+                <div class="form-group mt-3 ">
+                    <label for="">Description</label>
+                    <input type="text" class="form-control description" name="description" id="placeholder"
+                        placeholder="Description">
+                </div>
+                <div class="form-group">
+                    <label for="">Mentor Id</label>
+                    <input type="number" class="form-control mentor_id" name="mentor_id" id="placeholder"
+                        placeholder="Mentor Id" required>
+                </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-light"
+                data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save changes</button>
+        </div>
+        
+    </form>
+    </div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+   
     <script src="/libs/jquery/dist/jquery.min.js"></script>
     <script src="/libs/popper.js/dist/umd/popper.min.js"></script>
     <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -219,6 +323,31 @@
     <script src="/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
     <script src="/dist/js/pages/datatable/datatable-basic.init.js"></script>
 
+    <script>
+        $('#zero_config').on('click','.tombol-edit', function(){
+            let id = $(this).data('id');
+            let name = $(this).data('name');
+            let thumbnail = $(this).data('thumbnail');
+            let type = $(this).data('type');
+            let status = $(this).data('status');
+            let price = $(this).data('price');
+            let level = $(this).data('level');
+            let description = $(this).data('description');
+            let certificate = $(this).data('certificate');
+            let mentor_id = $(this).data('mentor_id');
+
+
+            $('#full-width-modal-edit').modal('show');
+            $('.id').val(id);
+            $('.name').val(name);
+            $('.thumbnail').val(thumbnail);
+            $('.price').val(price);
+            $('.status').val(status);
+            $('.level').val(level);
+            $('.description').val(description);
+            $('.mentor_id').val(mentor_id);
+        })
+    </script>
 </body>
 
 </html>
