--- a/views/admin/view_order.ejs
+++ b/views/admin/view_order.ejs
@@ -15,10 +15,12 @@
         <!-- ============================================================== -->
         <!-- Page wrapper  -->
         <!-- ============================================================== -->
+       
         <div class="page-wrapper">
             <!-- ============================================================== -->
             <!-- Bread crumb and right sidebar toggle -->
             <!-- ============================================================== -->
+            
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-7 align-self-center">
@@ -26,7 +28,7 @@
                         <div class="d-flex align-items-center">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb m-0 p-0">
-                                    <li class="breadcrumb-item"><a href="index.html">Course List</a>
+                                    <li class="breadcrumb-item"><a href="index.html">Order Transaction</a>
                                     </li>
                                 </ol>
                             </nav>
@@ -41,7 +43,43 @@
             <!-- Container fluid  -->
             <!-- ============================================================== -->
             <div class="container-fluid">
-               order
+               
+                 <!-- basic table -->
+                 <% if(alert.message != "") {%>
+                    <div class="alert alert-<%= alert.status %>" role="alert">
+                        <%= alert.message %>
+                      </div>
+                    <% } %>
+                 <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table id="zero_config" class="table table-striped table-bordered no-wrap">
+                                        <thead>
+                                            <tr>
+                                                <th>Invoice NO</th>
+                                                <th>Course Name</th>
+                                                <th>Price</th>
+                                                <th>Status</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <% for(let i=0; i < dataOrder.length; i++){ %>
+                                                <tr>
+                                                    <td><%= dataOrder[i].id %></td>
+                                                    <td><%= dataOrder[i].metadata.course_name %></td>
+                                                    <td><%= dataOrder[i].metadata.course_price %></td>
+                                                    <td><span class="badge badge-pill badge-secondary"><%= dataOrder[i].status %></span></td>
+                                                </tr>
+                                            <% } %>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- ============================================================== -->
             <!-- End Container fluid  -->
@@ -66,6 +104,10 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
+
+
+
+   
     <script src="/libs/jquery/dist/jquery.min.js"></script>
     <script src="/libs/popper.js/dist/umd/popper.min.js"></script>
     <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -84,7 +126,10 @@
     <script src="/libs/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script>
     <script src="/extra-libs/jvector/jquery-jvectormap-2.0.2.min.js"></script>
     <script src="/extra-libs/jvector/jquery-jvectormap-world-mill-en.js"></script>
-    <script src="/dist/js/pages/dashboards/dashboard1.min.js"></script>
+    <script src="/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="/dist/js/pages/datatable/datatable-basic.init.js"></script>
+
+  
 </body>
 
 </html>
