--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -26,16 +26,19 @@
                             class="hide-menu">Mentor</span></a></li>            
 
                 <li class="list-divider"></li>
+                <li class="nav-small-cap"><span class="hide-menu">Media</span></li>
+                <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="/dashboard/media"
+                    aria-expanded="false"><i data-feather="image" class="feather-icon"></i><span
+                        class="hide-menu">Media</span></a></li>   
+                <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="/dashboard/image-course"
+                    aria-expanded="false"><i data-feather="image" class="feather-icon"></i><span
+                        class="hide-menu">Image Courses</span></a></li> 
+
+                <li class="list-divider"></li>
                 <li class="nav-small-cap"><span class="hide-menu">Transactions</span></li>
                 <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="/dashboard/transaction"
                     aria-expanded="false"><i data-feather="tag" class="feather-icon"></i><span
                         class="hide-menu">Orders</span></a></li>       
-                
-                <li class="list-divider"></li>
-                <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="app-calendar.html"
-                    aria-expanded="false"><i data-feather="power" class="feather-icon"></i><span
-                        class="hide-menu">Logout</span></a></li>            
-
             </ul>
         </nav>
         <!-- End Sidebar navigation -->
